--- a/MGTA453 Case2 Group D.ipynb
+++ b/MGTA453 Case2 Group D.ipynb
@@ -1205,9 +1205,9 @@
    "source": [
     "The additional societal profit that the leading strategy (NYOP Charity) generates over the others throughout the year (assuming 365 days) is:\n",
     "\n",
-    "Over FR Charity: Approximately $522,219\n",
-    "Over FR (Flat Rate Pricing): Approximately $607,994\n",
-    "Over NYOP (Name Your Own Price): Approximately $1,030,153"
+    "Over FR Charity: Approximately $9.209595e+05\n",
+    "Over FR (Flat Rate Pricing): Approximately $1.006734e+06\n",
+    "Over NYOP (Name Your Own Price): Approximately $1.186311e+06"
    ]
   },
   {
