remove wrong text

--- a/MGTA453 Case2 Group D.ipynb
+++ b/MGTA453 Case2 Group D.ipynb
@@ -1153,7 +1153,7 @@
     "NYOP Charity: $3580.676667 \n",
     "FR Charity: $1057.50 \n",
     "FR (Flat Rate Pricing): $822.50 \n",
-    "NYOP (Name Your Own Price): 330.51 (a loss) \n"
+    "NYOP (Name Your Own Price): 330.51 \n"
    ]
   },
   {
